Update forward method to accept ratings instead of x

--- a/training/supervised/DNN/DNN.ipynb
+++ b/training/supervised/DNN/DNN.ipynb
@@ -156,8 +156,8 @@
     "            nn.Softmax(1)\n",
     "        )\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        return self.seq(x)"
+    "    def forward(self, ratings):\n",
+    "        return self.seq(ratings)"
    ]
   },
   {
@@ -225,11 +225,11 @@
     "    validation_data_loader = data.DataLoader(data.Subset(train_dataset, validation_indices), batch_size=batch_size)\n",
     "\n",
     "    model.train()\n",
-    "    for reason, rating, conclusion in train_data_loader:\n",
+    "    for reason, ratings, conclusion in train_data_loader:\n",
     "        optimizer.zero_grad()\n",
-    "        rating = rating.to(device)\n",
+    "        ratings = ratings.to(device)\n",
     "        conclusion = conclusion.to(device)\n",
-    "        output = model(rating)\n",
+    "        output = model(ratings)\n",
     "        loss = criterion(output, conclusion)\n",
     "        loss.backward()\n",
     "        losses.append(loss.item())\n",
@@ -240,10 +240,10 @@
     "    with torch.no_grad():\n",
     "        correct = 0\n",
     "        total = 0\n",
-    "        for reason, rating, conclusion in validation_data_loader:\n",
-    "            rating = rating.to(device)\n",
+    "        for reason, ratings, conclusion in validation_data_loader:\n",
+    "            ratings = ratings.to(device)\n",
     "            conclusion = conclusion.to(device)\n",
-    "            output = model(rating)\n",
+    "            output = model(ratings)\n",
     "            _, predicted = torch.max(output, 1)\n",
     "            _, truth = torch.max(conclusion, 1)\n",
     "            total += conclusion.size(0)\n",
@@ -308,10 +308,10 @@
     "with torch.no_grad():\n",
     "    model.eval()\n",
     "    test_data_loader = data.DataLoader(test_dataset, batch_size=batch_size)\n",
-    "    for reason, rating, conclusion in test_data_loader:\n",
-    "        rating = rating.to(device)\n",
+    "    for reason, ratings, conclusion in test_data_loader:\n",
+    "        ratings = ratings.to(device)\n",
     "        conclusion = conclusion.to(device)\n",
-    "        output = model(rating)\n",
+    "        output = model(ratings)\n",
     "        _, predicted = torch.max(output, 1)\n",
     "        _, truth = torch.max(conclusion, 1)\n",
     "        correct_count += (predicted == truth).sum().item()\n",
