Rename save file name and checkpoint name

--- a/training/supervised/DNN/DNN.ipynb
+++ b/training/supervised/DNN/DNN.ipynb
@@ -260,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), \"../../checkpoints/model.pth\")"
+    "torch.save(model.state_dict(), \"../../checkpoints/DNN.pth\")"
    ]
   },
   {
@@ -281,7 +281,7 @@
    ],
    "source": [
     "model = ReviewModel()\n",
-    "model.load_state_dict(torch.load(\"../../checkpoints/model.pth\"))"
+    "model.load_state_dict(torch.load(\"../../checkpoints/DNN.pth\"))"
    ]
   },
   {
