Update file paths in DNN + T5 encoder.ipynb and DNN.ipynb

--- a/training/supervised/DNN + T5 encoder.ipynb
+++ b/training/supervised/DNN + T5 encoder.ipynb
@@ -77,10 +77,10 @@
     }
    ],
    "source": [
-    "with open(\"../../../data/training/train.json\", \"r\", encoding=\"utf-8\") as fp:\n",
+    "with open(\"../../data/training/train.json\", \"r\", encoding=\"utf-8\") as fp:\n",
     "    train_reviews = json.load(fp)\n",
     "\n",
-    "with open(\"../../../data/training/test.json\", \"r\", encoding=\"utf-8\") as fp:\n",
+    "with open(\"../../data/training/test.json\", \"r\", encoding=\"utf-8\") as fp:\n",
     "    test_reviews = json.load(fp)\n",
     "\n",
     "\n",
@@ -524,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), f\"../../checkpoints/DNN + T5 encoder ({model.method}).pth\")"
+    "torch.save(model.state_dict(), f\"../checkpoints/DNN + T5 encoder ({model.method}).pth\")"
    ]
   },
   {
@@ -547,7 +547,7 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "method = \"concatenation\"\n",
     "model = ReviewModel(device=device, method=method)\n",
-    "model.load_state_dict(torch.load(f\"../../checkpoints/DNN + T5 encoder ({method}).pth\"))"
+    "model.load_state_dict(torch.load(f\"../checkpoints/DNN + T5 encoder ({method}).pth\"))"
    ]
   },
   {
