--- a/training/supervised/DNN.ipynb
+++ b/training/supervised/DNN.ipynb
@@ -75,10 +75,10 @@
     }
    ],
    "source": [
-    "with open(\"../../../data/training/train.json\", \"r\", encoding=\"utf-8\") as fp:\n",
+    "with open(\"../../data/training/train.json\", \"r\", encoding=\"utf-8\") as fp:\n",
     "    train_reviews = json.load(fp)\n",
     "\n",
-    "with open(\"../../../data/training/test.json\", \"r\", encoding=\"utf-8\") as fp:\n",
+    "with open(\"../../data/training/test.json\", \"r\", encoding=\"utf-8\") as fp:\n",
     "    test_reviews = json.load(fp)\n",
     "\n",
     "\n",
@@ -260,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), \"../../checkpoints/DNN.pth\")"
+    "torch.save(model.state_dict(), \"../checkpoints/DNN.pth\")"
    ]
   },
   {
@@ -281,7 +281,7 @@
    ],
    "source": [
     "model = ReviewModel()\n",
-    "model.load_state_dict(torch.load(\"../../checkpoints/DNN.pth\"))"
+    "model.load_state_dict(torch.load(\"../checkpoints/DNN.pth\"))"
    ]
   },
   {
