Update: Random Forest Model

--- a/methods/supervised/RandomForest.ipynb
+++ b/methods/supervised/RandomForest.ipynb
@@ -266,7 +266,9 @@
     "print(\"Training started\")\n",
     "clf.fit(X_train, y_train)\n",
     "print(\"Training finished\")\n",
+    "print(\"Validation started\")\n",
     "scores = cross_val_score(clf, X_train, y_train, cv=10, scoring='accuracy')\n",
+    "print(\"Validation finished\")\n",
     "print(f\"Accuracy scores for each fold are: {scores}\")"
    ]
   },
