Update: Random Forest Model

--- a/methods/supervised/RandomForest.ipynb
+++ b/methods/supervised/RandomForest.ipynb
@@ -269,7 +269,9 @@
     "print(\"Validation started\")\n",
     "scores = cross_val_score(clf, X_train, y_train, cv=10, scoring='accuracy')\n",
     "print(\"Validation finished\")\n",
-    "print(f\"Accuracy scores for each fold are: {scores}\")"
+    "print(f\"Accuracy scores for each fold are: {scores}\")\n",
+    "print(f\"Mean cross-validation score (Accuracy): {np.mean(scores):.2f}\")\n",
+    "print(f\"Standard deviation of cross-validation scores: {np.std(scores):.2f}\")"
    ]
   },
   {
