Update: feature importance table

--- a/methods/supervised/RandomForest.ipynb
+++ b/methods/supervised/RandomForest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,17 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score, roc_curve, auc\n",
     "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.tree import export_graphviz\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from IPython.display import display"
+    "from IPython.display import display\n",
+    "from IPython.display import Image\n",
+    "from subprocess import call"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +40,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -99,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -256,8 +259,12 @@
      "text": [
       "Training started\n",
       "Training finished\n",
+      "Validation started\n",
+      "Validation finished\n",
       "Accuracy scores for each fold are: [0.97435897 0.94871795 0.94017094 0.97435897 0.8974359  0.95726496\n",
-      " 0.97435897 0.98275862 0.93965517 0.92241379]\n"
+      " 0.97435897 0.98275862 0.93965517 0.92241379]\n",
+      "Mean cross-validation score (Accuracy): 0.9511\n",
+      "Standard deviation of cross-validation scores: 0.0257\n"
      ]
     }
    ],
@@ -270,22 +277,13 @@
     "scores = cross_val_score(clf, X_train, y_train, cv=10, scoring='accuracy')\n",
     "print(\"Validation finished\")\n",
     "print(f\"Accuracy scores for each fold are: {scores}\")\n",
-    "print(f\"Mean cross-validation score (Accuracy): {np.mean(scores):.2f}\")\n",
-    "print(f\"Standard deviation of cross-validation scores: {np.std(scores):.2f}\")"
+    "print(f\"Mean cross-validation score (Accuracy): {np.mean(scores):.4f}\")\n",
+    "print(f\"Standard deviation of cross-validation scores: {np.std(scores):.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = clf.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -298,13 +296,14 @@
     }
    ],
    "source": [
+    "y_pred = clf.predict(X_test)\n",
     "print(f\"Accuracy: {accuracy_score(y_test, y_pred) * 100:.2f}%\")\n",
     "print(f\"Test ROC AUC Score: {roc_auc_score(y_test, y_pred):.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -332,6 +331,99 @@
     "plt.title('Receiver Operating Characteristic (ROC) Curve')\n",
     "plt.legend(loc=\"lower right\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Accuracy</td>\n",
+       "      <td>0.311027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Attractiveness</td>\n",
+       "      <td>0.198267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Readability</td>\n",
+       "      <td>0.181165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Clarity and Coherence</td>\n",
+       "      <td>0.149403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Objectivity</td>\n",
+       "      <td>0.061084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Depth of Analysis</td>\n",
+       "      <td>0.058693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Language and Presentation</td>\n",
+       "      <td>0.040361</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     feature  importance\n",
+       "0                   Accuracy    0.311027\n",
+       "6             Attractiveness    0.198267\n",
+       "5                Readability    0.181165\n",
+       "2      Clarity and Coherence    0.149403\n",
+       "1                Objectivity    0.061084\n",
+       "3          Depth of Analysis    0.058693\n",
+       "4  Language and Presentation    0.040361"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fi_model = pd.DataFrame({'feature': X_train.columns,\n",
+    "                   'importance': clf.feature_importances_}).\\\n",
+    "                    sort_values('importance', ascending = False)\n",
+    "fi_model.head(7)"
    ]
   }
  ],
