Update: change the name

--- a/methods/supervised/RandomForest.ipynb
+++ b/methods/supervised/RandomForest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -269,12 +269,12 @@
     }
    ],
    "source": [
-    "clf = RandomForestClassifier(n_estimators=50, random_state=42)\n",
+    "forest = RandomForestClassifier(n_estimators=50, random_state=42)\n",
     "print(\"Training started\")\n",
-    "clf.fit(X_train, y_train)\n",
+    "forest.fit(X_train, y_train)\n",
     "print(\"Training finished\")\n",
     "print(\"Validation started\")\n",
-    "scores = cross_val_score(clf, X_train, y_train, cv=10, scoring='accuracy')\n",
+    "scores = cross_val_score(forest, X_train, y_train, cv=10, scoring='accuracy')\n",
     "print(\"Validation finished\")\n",
     "print(f\"Accuracy scores for each fold are: {scores}\")\n",
     "print(f\"Mean cross-validation score (Accuracy): {np.mean(scores):.4f}\")\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -296,14 +296,14 @@
     }
    ],
    "source": [
-    "y_pred = clf.predict(X_test)\n",
+    "y_pred = forest.predict(X_test)\n",
     "print(f\"Accuracy: {accuracy_score(y_test, y_pred) * 100:.2f}%\")\n",
     "print(f\"Test ROC AUC Score: {roc_auc_score(y_test, y_pred):.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
     }
    ],
    "source": [
-    "y_pred_prob = clf.predict_proba(X_test)[:, 1]\n",
+    "y_pred_prob = forest.predict_proba(X_test)[:, 1]\n",
     "fpr, tpr, thresholds = roc_curve(y_test, y_pred_prob)\n",
     "roc_auc = auc(fpr, tpr)\n",
     "plt.figure(figsize=(8, 6))\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -414,14 +414,14 @@
        "4  Language and Presentation    0.040361"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fi_model = pd.DataFrame({'feature': X_train.columns,\n",
-    "                   'importance': clf.feature_importances_}).\\\n",
+    "                   'importance': forest.feature_importances_}).\\\n",
     "                    sort_values('importance', ascending = False)\n",
     "fi_model.head(7)"
    ]
