--- a/methods/supervised/DNN.ipynb
+++ b/methods/supervised/DNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,6 +318,15 @@
     "\n",
     "print(f\"Correct: {correct_count}\")\n",
     "print(f\"Accuracy: {correct_count / len(test_data_loader) * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model, \"../checkpoints/DNN.pt\")"
    ]
   }
  ],
