Add metrics calculation for evaluation

--- a/methods/supervised/DNN + T5 encoder.ipynb
+++ b/methods/supervised/DNN + T5 encoder.ipynb
@@ -16,6 +16,7 @@
     "\n",
     "import tqdm.auto as tqdm\n",
     "import sklearn.model_selection as model_selection\n",
+    "import sklearn.metrics as metrics\n",
     "import transformers\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +42,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +546,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,21 +560,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correct: 49\n",
+      "Precision: 97.73%\n",
+      "Recall: 100.00%\n",
+      "F1: 98.85%\n",
+      "AUROC: 92.86%\n",
       "Accuracy: 98.00%\n"
      ]
     }
    ],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "batch_size = 1\n",
     "\n",
+    "results = []\n",
     "correct_count = 0\n",
     "\n",
     "\n",
@@ -587,10 +593,17 @@
     "        output = model(ratings, reason)\n",
     "        _, predicted = torch.max(output, 1)\n",
     "        _, truth = torch.max(conclusion, 1)\n",
+    "        results.append((predicted.item(), truth.item()))\n",
     "        correct_count += (predicted == truth).sum().item()\n",
     "\n",
-    "print(f\"Correct: {correct_count}\")\n",
-    "print(f\"Accuracy: {correct_count / len(test_data_loader) * 100:.2f}%\")"
+    "predicts = [r[0] for r in results]\n",
+    "truths = [r[1] for r in results]\n",
+    "\n",
+    "print(f\"Precision: {metrics.precision_score(truths, predicts) * 100:.2f}%\")\n",
+    "print(f\"Recall: {metrics.recall_score(truths, predicts) * 100:.2f}%\")\n",
+    "print(f\"F1: {metrics.f1_score(truths, predicts) * 100:.2f}%\")\n",
+    "print(f\"AUROC: {metrics.roc_auc_score(truths, predicts) * 100:.2f}%\")\n",
+    "print(f\"Accuracy: {metrics.accuracy_score(truths, predicts) * 100:.2f}%\")"
    ]
   },
   {
