--- a/methods/supervised/DNN.ipynb
+++ b/methods/supervised/DNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "import json\n",
     "\n",
     "import sklearn.model_selection as model_selection\n",
+    "import sklearn.metrics as metrics\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
    ]
@@ -286,21 +287,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correct: 48\n",
+      "Precision: 95.56%\n",
+      "Recall: 100.00%\n",
+      "F1: 97.73%\n",
+      "AUROC: 85.71%\n",
       "Accuracy: 96.00%\n"
      ]
     }
    ],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "batch_size = 1\n",
     "\n",
+    "results = []\n",
     "correct_count = 0\n",
     "\n",
     "\n",
@@ -314,10 +320,17 @@
     "        output = model(ratings)\n",
     "        _, predicted = torch.max(output, 1)\n",
     "        _, truth = torch.max(conclusion, 1)\n",
+    "        results.append((predicted.item(), truth.item()))\n",
     "        correct_count += (predicted == truth).sum().item()\n",
     "\n",
-    "print(f\"Correct: {correct_count}\")\n",
-    "print(f\"Accuracy: {correct_count / len(test_data_loader) * 100:.2f}%\")"
+    "predicts = [r[0] for r in results]\n",
+    "truths = [r[1] for r in results]\n",
+    "\n",
+    "print(f\"Precision: {metrics.precision_score(truths, predicts) * 100:.2f}%\")\n",
+    "print(f\"Recall: {metrics.recall_score(truths, predicts) * 100:.2f}%\")\n",
+    "print(f\"F1: {metrics.f1_score(truths, predicts) * 100:.2f}%\")\n",
+    "print(f\"AUROC: {metrics.roc_auc_score(truths, predicts) * 100:.2f}%\")\n",
+    "print(f\"Accuracy: {metrics.accuracy_score(truths, predicts) * 100:.2f}%\")"
    ]
   },
   {
