Add test_human_dataset to DNN + T5 encoder notebook

--- a/methods/supervised/DNN + T5 encoder.ipynb
+++ b/methods/supervised/DNN + T5 encoder.ipynb
@@ -84,6 +84,9 @@
     "with open(\"../../data/training/test.json\", \"r\", encoding=\"utf-8\") as fp:\n",
     "    test_reviews = json.load(fp)\n",
     "\n",
+    "with open(\"../../data/training/test_human.json\", \"r\", encoding=\"utf-8\") as fp:\n",
+    "    test_human_reviews = json.load(fp)\n",
+    "\n",
     "\n",
     "print(f\"All Data: {len(train_reviews) + len(test_reviews)}\")\n",
     "print(f\"Train Data: {len(train_reviews)}\")\n",
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,8 +121,9 @@
    ],
    "source": [
     "class ReviewDataset(data.Dataset):\n",
-    "    def __init__(self, reviews):\n",
+    "    def __init__(self, reviews, conclusion_key=\"conclusion\"):\n",
     "        self.reviews = reviews\n",
+    "        self.conclusion_key = conclusion_key\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.reviews)\n",
@@ -128,12 +132,13 @@
     "        review = self.reviews[index]\n",
     "        reason = str(review[\"reason\"])\n",
     "        rating = torch.tensor(review[\"rating\"]).float()\n",
-    "        conclusion = F.one_hot(torch.tensor(review[\"conclusion\"]), 2).float()\n",
+    "        conclusion = F.one_hot(torch.tensor(review[self.conclusion_key]), 2).float()\n",
     "        return reason, rating, conclusion\n",
     "\n",
     "\n",
     "train_dataset = ReviewDataset(train_reviews)\n",
     "test_dataset = ReviewDataset(test_reviews)\n",
+    "test_human_dataset = ReviewDataset(test_human_reviews, conclusion_key=\"humanConclusion\")\n",
     "\n",
     "print(f\"Number of reviews in dataset: {len(train_dataset)}\")\n",
     "print(f\"Number of reviews in dataset: {len(test_dataset)}\")"
@@ -141,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,11 +572,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision: 97.73%\n",
-      "Recall: 100.00%\n",
-      "F1: 98.85%\n",
-      "AUROC: 92.86%\n",
-      "Accuracy: 98.00%\n"
+      "Precision: 86.36%\n",
+      "Recall: 90.48%\n",
+      "F1: 88.37%\n",
+      "AUROC: 57.74%\n",
+      "Accuracy: 80.00%\n"
      ]
     }
    ],
@@ -586,7 +591,8 @@
     "model.to(device)\n",
     "with torch.no_grad():\n",
     "    model.eval()\n",
-    "    test_data_loader = data.DataLoader(test_dataset, batch_size=batch_size)\n",
+    "    # test_data_loader = data.DataLoader(test_dataset, batch_size=batch_size)\n",
+    "    test_data_loader = data.DataLoader(test_human_dataset, batch_size=batch_size)\n",
     "    for reason, ratings, conclusion in test_data_loader:\n",
     "        ratings = ratings.to(device)\n",
     "        conclusion = conclusion.to(device)\n",
