--- a/methods/supervised/DNN.ipynb
+++ b/methods/supervised/DNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -82,6 +82,9 @@
     "with open(\"../../data/training/test.json\", \"r\", encoding=\"utf-8\") as fp:\n",
     "    test_reviews = json.load(fp)\n",
     "\n",
+    "with open(\"../../data/training/test_human.json\", \"r\", encoding=\"utf-8\") as fp:\n",
+    "    test_human_reviews = json.load(fp)\n",
+    "\n",
     "\n",
     "print(f\"All Data: {len(train_reviews) + len(test_reviews)}\")\n",
     "print(f\"Train Data: {len(train_reviews)}\")\n",
@@ -102,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -116,8 +119,9 @@
    ],
    "source": [
     "class ReviewDataset(data.Dataset):\n",
-    "    def __init__(self, reviews):\n",
+    "    def __init__(self, reviews, conclusion_key=\"conclusion\"):\n",
     "        self.reviews = reviews\n",
+    "        self.conclusion_key = conclusion_key\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.reviews)\n",
@@ -126,12 +130,13 @@
     "        review = self.reviews[index]\n",
     "        reason = str(review[\"reason\"])\n",
     "        rating = torch.tensor(review[\"rating\"]).float()\n",
-    "        conclusion = F.one_hot(torch.tensor(review[\"conclusion\"]), 2).float()\n",
+    "        conclusion = F.one_hot(torch.tensor(review[self.conclusion_key]), 2).float()\n",
     "        return reason, rating, conclusion\n",
     "\n",
     "\n",
     "train_dataset = ReviewDataset(train_reviews)\n",
     "test_dataset = ReviewDataset(test_reviews)\n",
+    "test_human_dataset = ReviewDataset(test_human_reviews, conclusion_key=\"humanConclusion\")\n",
     "\n",
     "print(f\"Number of reviews in dataset: {len(train_dataset)}\")\n",
     "print(f\"Number of reviews in dataset: {len(test_dataset)}\")"
@@ -139,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +280,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,18 +292,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision: 95.56%\n",
-      "Recall: 100.00%\n",
-      "F1: 97.73%\n",
-      "AUROC: 85.71%\n",
-      "Accuracy: 96.00%\n"
+      "Precision: 84.44%\n",
+      "Recall: 90.48%\n",
+      "F1: 87.36%\n",
+      "AUROC: 51.49%\n",
+      "Accuracy: 78.00%\n"
      ]
     }
    ],
@@ -313,7 +318,8 @@
     "model.to(device)\n",
     "with torch.no_grad():\n",
     "    model.eval()\n",
-    "    test_data_loader = data.DataLoader(test_dataset, batch_size=batch_size)\n",
+    "    # test_data_loader = data.DataLoader(test_dataset, batch_size=batch_size)\n",
+    "    test_data_loader = data.DataLoader(test_human_dataset, batch_size=batch_size)\n",
     "    for reason, ratings, conclusion in test_data_loader:\n",
     "        ratings = ratings.to(device)\n",
     "        conclusion = conclusion.to(device)\n",
