--- a/methods/supervised/RandomForest.ipynb
+++ b/methods/supervised/RandomForest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
        "4  Language and Presentation    0.040361"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
        "4  Language and Presentation    0.017299"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1241,7 @@
        "4  Language and Presentation    0.046324"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1509,7 +1509,7 @@
        "2  Language and Presentation    0.252612"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,6 +1519,45 @@
     "                    'importance': rf_reduce.feature_importances_}).\\\n",
     "                    sort_values('importance', ascending = False)\n",
     "fi_cv_model_reduce.head(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 83.72%\n",
+      "Recall: 83.72%\n",
+      "F1: 83.72%\n",
+      "AUROC: 41.86%\n",
+      "Accuracy: 72.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"../../data/training/test_human.json\", \"r\", encoding=\"utf-8\") as fp:\n",
+    "    human_reviews = json.load(fp)\n",
+    "\n",
+    "human_df = createDataFrame(human_reviews)\n",
+    "\n",
+    "X_human = human_df.drop('conclusion', axis=1)\n",
+    "y_human = human_df['conclusion']\n",
+    "\n",
+    "accuracy = accuracy_score(y_human, y_pred)\n",
+    "precision = precision_score(y_human, y_pred, average='binary')\n",
+    "f1 = f1_score(y_human, y_pred, average='binary')\n",
+    "recall = recall_score(y_human, y_pred, average='binary')\n",
+    "auc_roc = roc_auc_score(y_human, y_pred)\n",
+    "\n",
+    "print(f\"Precision: {precision * 100:.2f}%\")\n",
+    "print(f\"Recall: {recall * 100:.2f}%\")\n",
+    "print(f\"F1: {f1 * 100:.2f}%\")\n",
+    "print(f\"AUROC: {auc_roc * 100:.2f}%\")\n",
+    "print(f\"Accuracy: {accuracy * 100:.2f}%\")"
    ]
   }
  ],
